lib/bot/cmds/github_grammar.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(request) { return request },
        peg$c1 = /^[ \t\r\n]/,
        peg$c2 = { type: "class", value: "[ \\t\\r\\n]", description: "[ \\t\\r\\n]" },
        peg$c3 = "github",
        peg$c4 = { type: "literal", value: "github", description: "\"github\"" },
        peg$c5 = function(keyword) { return keyword.toLowerCase() },
        peg$c6 = "issue",
        peg$c7 = { type: "literal", value: "issue", description: "\"issue\"" },
        peg$c8 = "issues",
        peg$c9 = { type: "literal", value: "issues", description: "\"issues\"" },
        peg$c10 = "new",
        peg$c11 = { type: "literal", value: "new", description: "\"new\"" },
        peg$c12 = "close",
        peg$c13 = { type: "literal", value: "close", description: "\"close\"" },
        peg$c14 = "get",
        peg$c15 = { type: "literal", value: "get", description: "\"get\"" },
        peg$c16 = "search",
        peg$c17 = { type: "literal", value: "search", description: "\"search\"" },
        peg$c18 = "list",
        peg$c19 = { type: "literal", value: "list", description: "\"list\"" },
        peg$c20 = "comment",
        peg$c21 = { type: "literal", value: "comment", description: "\"comment\"" },
        peg$c22 = "summarize",
        peg$c23 = { type: "literal", value: "summarize", description: "\"summarize\"" },
        peg$c24 = "add",
        peg$c25 = { type: "literal", value: "add", description: "\"add\"" },
        peg$c26 = "create",
        peg$c27 = { type: "literal", value: "create", description: "\"create\"" },
        peg$c28 = "for",
        peg$c29 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c30 = "on",
        peg$c31 = { type: "literal", value: "on", description: "\"on\"" },
        peg$c32 = "to",
        peg$c33 = { type: "literal", value: "to", description: "\"to\"" },
        peg$c34 = "in",
        peg$c35 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c36 = "a",
        peg$c37 = { type: "literal", value: "a", description: "\"a\"" },
        peg$c38 = "an",
        peg$c39 = { type: "literal", value: "an", description: "\"an\"" },
        peg$c40 = "the",
        peg$c41 = { type: "literal", value: "the", description: "\"the\"" },
        peg$c42 = "that",
        peg$c43 = { type: "literal", value: "that", description: "\"that\"" },
        peg$c44 = "are",
        peg$c45 = { type: "literal", value: "are", description: "\"are\"" },
        peg$c46 = "is",
        peg$c47 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c48 = "state",
        peg$c49 = { type: "literal", value: "state", description: "\"state\"" },
        peg$c50 = "open",
        peg$c51 = { type: "literal", value: "open", description: "\"open\"" },
        peg$c52 = "closed",
        peg$c53 = { type: "literal", value: "closed", description: "\"closed\"" },
        peg$c54 = "any",
        peg$c55 = { type: "literal", value: "any", description: "\"any\"" },
        peg$c56 = "milestone",
        peg$c57 = { type: "literal", value: "milestone", description: "\"milestone\"" },
        peg$c58 = "labels",
        peg$c59 = { type: "literal", value: "labels", description: "\"labels\"" },
        peg$c60 = /^[a-z]/i,
        peg$c61 = { type: "class", value: "[a-z]i", description: "[a-z]i" },
        peg$c62 = function(token) { return token.join( '' ); },
        peg$c63 = "@",
        peg$c64 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c65 = function() { return 'blame' },
        peg$c66 = "file",
        peg$c67 = { type: "literal", value: "file", description: "\"file\"" },
        peg$c68 = /^[0-9]/,
        peg$c69 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c70 = function(token) { return token.join( '' ) },
        peg$c71 = "#",
        peg$c72 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c73 = function(issue) { return { "issue": issue } },
        peg$c74 = /^[,;=.>]/,
        peg$c75 = { type: "class", value: "[\\,\\;\\=\\.\\>]", description: "[\\,\\;\\=\\.\\>]" },
        peg$c76 = function(data) { return { "method": "new_issue", "data": data } },
        peg$c77 = function(data) { return { "method": "close_issue", "data": data } },
        peg$c78 = function(data) { return { "method": "search_issues", "data": data } },
        peg$c79 = function(data) { return { "method": "comment_issue", "data": data } },
        peg$c80 = function(title, props, bodytext) {
          function hasProperty( property )
          {
            return this in property;
          }

          var data = {};

          if ( title ) data.title = title;

          var assigneeProperty = props.filter( hasProperty, "assignee" );

          if (assigneeProperty.length > 0) data.assignee = assigneeProperty[0].assignee

          var milestoneProperty = props.filter( hasProperty, "milestone" );

          if (milestoneProperty.length > 0) data.milestone = milestoneProperty[0].milestone

          var labelsProperty = props.filter( hasProperty, "labels" );

          if (labelsProperty.length > 0) data.labels = labelsProperty[0].labels

          if ( bodytext ) data.body = bodytext;

          return data;
        },
        peg$c81 = function(target, content) {
          return {
            "issue": target.issue,
            "body": content
          };
        },
        peg$c82 = function(first, second) { return [ first, second ].join( " " ); },
        peg$c83 = function(title, props, bodytext) {
          function hasProperty( property )
          {
            return this in property;
          }

          var data = { whereclause: "" };

          if ( title && ( title.length > 0 ) ) data.whereclause = [
            title.replace( /\s/, ' ' ),
            data.whereclause
          ].join( ' ' );

          var assigneeProperty = props.filter( hasProperty, "assignee" );

          if (assigneeProperty.length > 0) data.whereclause = [
            data.whereclause,
            "involves:" + assigneeProperty[0].assignee
          ].join( ' ' );

          var labelsProperty = props.filter( hasProperty, "labels" );

          if (labelsProperty.length > 0) data.whereclause = [
            data.whereclause,
            labelsProperty[0].labels.map( function( elem, index, all ) { "label:" + elem } )
          ].join( ' ' );

          var stateProperty = props.filter( hasProperty, "state" );

          if ( ( stateProperty.length > 0 ) && ( stateProperty[0].state != "any" ) ) data.whereclause = [
            data.whereclause,
            "state:" + stateProperty[0].state
          ].join( ' ' );

          if ( bodytext ) data.whereclause = [
            bodytext.replace( /\s/, ' ' ),
            data.whereclause
          ].join( ' ' );

          data.whereclause = data.whereclause.replace( /\s*(.*?)\s*/, "$1" );

          return data;
        },
        peg$c84 = function(value) { return { "assignee":value } },
        peg$c85 = function(value) { return { "milestone":value } },
        peg$c86 = function(value) { return { "labels":value } },
        peg$c87 = function(value) { return { "state": value } },
        peg$c88 = function(state) { return state },
        peg$c89 = function(value) { return value },
        peg$c90 = "[",
        peg$c91 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c92 = "]",
        peg$c93 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c94 = function(token) { return token },
        peg$c95 = function(assignee) { return assignee },
        peg$c96 = "<HERE",
        peg$c97 = { type: "literal", value: "<HERE", description: "\"<HERE\"" },
        peg$c98 = "END",
        peg$c99 = { type: "literal", value: "END", description: "\"END\"" },
        peg$c100 = { type: "other", description: "string" },
        peg$c101 = function(token) { return token.join(""); },
        peg$c102 = "\"",
        peg$c103 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c104 = "\\",
        peg$c105 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c106 = "/",
        peg$c107 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c108 = "b",
        peg$c109 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c110 = function() { return "\b"; },
        peg$c111 = "f",
        peg$c112 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c113 = function() { return "\f"; },
        peg$c114 = "n",
        peg$c115 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c116 = function() { return "\n"; },
        peg$c117 = "r",
        peg$c118 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c119 = function() { return "\r"; },
        peg$c120 = "t",
        peg$c121 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c122 = function() { return "\t"; },
        peg$c123 = "u",
        peg$c124 = { type: "literal", value: "u", description: "\"u\"" },
        peg$c125 = function(digits) {
                  return String.fromCharCode(parseInt(digits, 16));
                },
        peg$c126 = function(sequence) { return sequence; },
        peg$c127 = /^["\xAB\u201C\u201F]/,
        peg$c128 = { type: "class", value: "[\\\"\\u00AB\\u201C\\u201F]", description: "[\\\"\\u00AB\\u201C\\u201F]" },
        peg$c129 = /^["\u201D\u300B\u301E\u301F]/,
        peg$c130 = { type: "class", value: "[\\\"\\u201D\\u300B\\u301E\\u301F]", description: "[\\\"\\u201D\\u300B\\u301E\\u301F]" },
        peg$c131 = /^['\u2018 -!#-[\]-\u10FFFF]/,
        peg$c132 = { type: "class", value: "[\\'\\u2018\\x20-\\x21\\x23-\\x5B\\x5D-\\u10FFFF]", description: "[\\'\\u2018\\x20-\\x21\\x23-\\x5B\\x5D-\\u10FFFF]" },
        peg$c133 = /^[0-9a-f]/i,
        peg$c134 = { type: "class", value: "[0-9a-f]i", description: "[0-9a-f]i" },
        peg$c135 = "<<<",
        peg$c136 = { type: "literal", value: "<<<", description: "\"<<<\"" },
        peg$c137 = function(terminator) { bodyTerminator = terminator; return true; },
        peg$c138 = function(terminator, lines) {
              return lines.join("\n");
            },
        peg$c139 = function(text) { return text; },
        peg$c140 = function(terminator) { return terminator === bodyTerminator },
        peg$c141 = { type: "other", description: "zero or more characters" },
        peg$c142 = /^[^\n\r]/,
        peg$c143 = { type: "class", value: "[^\\n\\r]", description: "[^\\n\\r]" },
        peg$c144 = function(chars) { return chars.join(""); },
        peg$c145 = { type: "other", description: "one or more characters" },
        peg$c146 = { type: "other", description: "empty line" },
        peg$c147 = { type: "other", description: "end of line or file" },
        peg$c148 = { type: "other", description: "end of line" },
        peg$c149 = "\n",
        peg$c150 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c151 = "\r\n",
        peg$c152 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c153 = "\r",
        peg$c154 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c155 = { type: "other", description: "end of file" },
        peg$c156 = { type: "any", description: "any character" },
        peg$c157 = function() { return ""; },
        peg$c158 = { type: "other", description: "whitespace" },
        peg$c159 = /^[\t\x0B\f \xA0\u1680\u180E\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2007\u2008\u2009\u200A\u202F\u205F\u3000\uFEFF]/,
        peg$c160 = { type: "class", value: "[\\t\\v\\f \\u00A0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000\\uFEFF]", description: "[\\t\\v\\f \\u00A0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000\\uFEFF]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsegithub();
      if (s1 !== peg$FAILED) {
        s2 = peg$parserequest();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsews() {
      var s0, s1;

      s0 = [];
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (peg$c1.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
      }

      return s0;
    }

    function peg$parseWS() {
      var s0, s1;

      s0 = [];
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          if (peg$c1.test(input.charAt(peg$currPos))) {
            s1 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c2); }
          }
        }
      } else {
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsegithub() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6).toLowerCase() === peg$c3) {
          s2 = input.substr(peg$currPos, 6);
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseissue() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 5).toLowerCase() === peg$c6) {
          s2 = input.substr(peg$currPos, 5);
          peg$currPos += 5;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseissues() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6).toLowerCase() === peg$c8) {
          s2 = input.substr(peg$currPos, 6);
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsenew() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c10) {
          s2 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseclose() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 5).toLowerCase() === peg$c12) {
          s2 = input.substr(peg$currPos, 5);
          peg$currPos += 5;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseget() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c14) {
          s2 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsesearch() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6).toLowerCase() === peg$c16) {
          s2 = input.substr(peg$currPos, 6);
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c17); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parselist() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 4).toLowerCase() === peg$c18) {
          s2 = input.substr(peg$currPos, 4);
          peg$currPos += 4;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecomment() {
      var s0, s1, s2;
